# G4RCE-Pokemon-Remote-Code-Execution

./: Dockerfile  README.md  docker-compose.yml
assets/: .gitignore  bin_splitter.py  image_converter.py
project/: CMakeLists.txt  build.sh
project/games/diamond_pearl/: CMakeLists.txt
project/games/diamond_pearl/assembly_projects/: CMakeLists.txt
project/games/diamond_pearl/assembly_projects/src/: give_all_items.asm  simple_return.asm  simple_return_thumb.asm
project/games/diamond_pearl/communication/: CMakeLists.txt  main.c
project/games/diamond_pearl/dot_artist_editor/: CMakeLists.txt  main.c
project/games/diamond_pearl/dot_artist_editor/src/: dot_artist.h
project/games/diamond_pearl/enable_cloning/: CMakeLists.txt  main.c
project/games/diamond_pearl/generate_ase_script/: generate_script.py
project/games/diamond_pearl/generate_ase_script/data/: base_script.json
project/games/diamond_pearl/generate_ase_script/src/: inject_overlay_payload.asm  overlay_payload.asm
project/games/diamond_pearl/increase_packetsize/: CMakeLists.txt  main.c
project/games/diamond_pearl/libs/graphics/: poke_sprite.h  sprite_functions.h
project/games/diamond_pearl/libs/util/: functions.h  macros.h  memory.h  types.h
project/games/diamond_pearl/libs/wifi/: comm_functions.h  packet_handler.c  packet_handler.h  packets.h
project/games/diamond_pearl/sprite_editing/inject_custom_palette/: linker.ld  main.c
project/games/diamond_pearl/sprite_editing/inject_custom_sprite/: linker.ld  main.c
project/games/diamond_pearl/sprite_editing/load_sprite_from_narc/: linker.ld  main.c
project/games/diamond_pearl/sprite_editing/set_sprite_hooks/: main.c
project/games/platinum/: CMakeLists.txt
project/games/platinum/generate_ase_script/: CMakeLists.txt
project/games/platinum/generate_ase_script/data/: base_script.json
project/games/platinum/generate_ase_script/src/: inject_overlay_payload.asm  overlay_payload.asm
server/: config.yaml
server/src/http_server/: http_helper.py  http_server.py  packet_handler.py
